# RIL

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 00-icon.yml  01-bug.yml  01-fontawesome.yml  02-bug.yml  99-other.yml  config.yml  icon.yml  other.yml
.github/workflows/: docs-experimental.yml  docs.yml  release.yml
RIL/: _core.py  settings.py  utils.py
RIL/bootstrap/: component.py
RIL/fontawesome/: component.py  component.pyi
RIL/material/: component.py
RIL/octicons/: component.py
RIL/phosphor/: component.py  component.pyi
RIL/plugins/: __init__.py  ril.py  svgr.py
RIL/simple/: SimpleIcon.jsx  component.py  component.pyi
docs/: index.md  vercel.json
docs/.overrides/partials/: copyright.html
docs/assets/stylesheets/: admonitions.css
docs/bootstrap/: index.md
docs/fontawesome/: index.md  pro.md  style-reference.md  styling.md
docs/lucide/: index.md
docs/material/: index.md
docs/octicons/: index.md
docs/other/: index.md  plugins.md
docs/phosphor/: index.md
docs/plugins/: index.md
docs/simple/: index.md
