[project]
name = "reflex-icon-library"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "casefy>=0.1.7",
    "deepmerge>=2.0",
    "hishel>=0.1.1",
    "inflect>=7.4.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "pydantic>=2.10.0",
    "pydantic-extra-types>=2.10.0",
    "pydantic-settings>=2.6.1",
    "reflex>=0.6.5",
    "semver>=3.0.2",
]


[dependency-groups]
docs = [
    "artwall",
    "cairosvg>=2.7.1",
    "iconoclast>=3.0.0",
    "mkdocs-material",
    "pillow>=11.0.0",
]

[tool.uv.sources]
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material-insiders" }
artwall = { git = "https://github.com/celsiusnarhwal/artwall" }

[tool.ruff.lint]
ignore = ["F403"]

[tool.hatch.build.targets.wheel]
packages = ["RIL"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
